fixed spacing on mobile navbar

--- a/src/components/NavigationBar/style.less
+++ b/src/components/NavigationBar/style.less
@@ -127,7 +127,7 @@
   }
 
   .navbar-mobile > button {
-    padding: 1em 1em;
+    padding: 0px 30px;
     float: right;
     border: none;
     background-color: transparent;
@@ -143,11 +143,12 @@
     }
   }
   .icon {
-    height: 100%;
+    height: 78px;
   }
   .menuicon {
-    height: 1em;
-    margin: 0px 32px;
+    height: 20px;
+    width: 40px;
+    margin: 29px 0;
   }
 
   .mobile-links {
@@ -174,10 +175,10 @@
     }
     button {
       position: absolute;
-      right: 48px;
+      right: 30px;
       top: 28px;
-      height: 38px !important;
-      width: 38px !important;
+      height: 40px !important;
+      width: 40px !important;
       color: @white;
       background-color: @black;
       cursor: pointer;
